--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,8 @@
 <body>
    
 {% include "global/partials/header.html" %}
+
+{% include "global/partials/messages.html" %}
     <main class="content"> 
         {% block content %}{% endblock content %}
         {% include "global/partials/pagination.html" %}
